<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".recursion.Recursion">

    <Button
            android:id="@+id/recurHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="@dimen/text30"
            android:textColor="@color/bgGradEnd"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:id="@+id/recurTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/hello_blank_fragment"/>

    <Button
            android:id="@+id/recurHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="@dimen/text30"
            android:textColor="@color/bgGradEnd"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />


    <TableLayout
            android:id="@+id/recurTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin20"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin20"
            android:layout_above="@+id/recurChoice"
            android:layout_marginBottom="152dp" />

    <LinearLayout
            android:id="@+id/recurChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/recurSlider">

        <TextView
                android:id="@+id/recurText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/number_of_queens"
                android:textColor="@color/black"
                android:padding="@dimen/margin10"
                android:textStyle="bold"
                android:background="@drawable/buttonripple"
                android:textSize="@dimen/text30" />

        <Button
                android:id="@+id/recur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@drawable/buttonripple"
                android:textStyle="bold"
                android:padding="@dimen/margin10"
                android:textSize="@dimen/text30"
                android:text="@string/solve_n_queens" />

    </LinearLayout>

    <com.google.android.material.slider.Slider
            android:id="@+id/recurSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyMaterialTheme"
            android:background="@drawable/border"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>