<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screenbg"
        tools:context=".sort.SortHelp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:gravity="center"
            android:orientation="vertical">
        <TextView
                android:id="@+id/sortHelpTitle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_margin="@dimen/margin10"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:background="@drawable/border"
                android:gravity="center">

            <TextView
                    android:id="@+id/genInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text30"
                    android:layout_margin="@dimen/margin10"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/sortingInfo"
                    android:layout_alignParentTop="true"/>

            <ImageView
                    android:id="@+id/sortim1"
                    android:src="@drawable/sortsize1"
                    android:layout_width="wrap_content"
                    android:layout_margin="@dimen/margin10"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/genInfo"
                    android:contentDescription="@string/picture"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:background="@drawable/border"
                android:gravity="center">

            <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text30"
                    android:layout_margin="@dimen/margin10"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/sorthelp1"
                    android:layout_alignParentTop="true"/>

            <ImageView
                    android:id="@+id/sortim2"
                    android:src="@drawable/sortsize2"
                    android:layout_margin="@dimen/margin10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv1"
                    android:contentDescription="@string/picture"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:background="@drawable/border"
                android:gravity="center">
            <TextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text30"
                    android:layout_margin="@dimen/margin10"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/sorthelp2"
                    android:layout_alignParentTop="true"/>

            <ImageView
                    android:id="@+id/sortim3"
                    android:layout_width="wrap_content"
                    android:layout_margin="@dimen/margin10"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sortmeth1"
                    android:layout_below="@id/tv2"
                    android:contentDescription="@string/picture"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:background="@drawable/border"
                android:gravity="center">
            <TextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text30"
                    android:layout_margin="@dimen/margin10"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/sorthelp3"
                    android:layout_alignParentTop="true"/>

            <ImageView
                    android:id="@+id/sortim4"
                    android:layout_width="wrap_content"
                    android:layout_margin="@dimen/margin10"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sortmeth2"
                    android:layout_below="@id/tv3"
                    android:contentDescription="@string/picture"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:background="@drawable/border"
                android:gravity="center">

            <TextView
                    android:id="@+id/tv4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin10"
                    android:textSize="@dimen/text30"
                    android:textColor="@color/white"
                    android:text="@string/sorthelp4"
                    android:layout_alignParentTop="true"/>

            <ImageView
                    android:id="@+id/sortim5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin10"
                    android:src="@drawable/sortchart1"
                    android:layout_below="@id/tv4"
                    android:contentDescription="@string/picture"/>
        </RelativeLayout>



        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/margin20"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/sortHelpHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textSize="@dimen/text30"
                    android:textColor="@color/bgGradEnd"
                    style="?android:attr/buttonBarButtonStyle" />


            <Button
                    android:id="@+id/returnToSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text30"
                    android:textColor="@color/bgGradEnd"
                    android:text="@string/go_to_sorting"
                    style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>




    </LinearLayout>


</ScrollView>